[package]
name = "rustos"
version = "0.1.0"
authors = ["Zixiong Liu <lzx@uchicago.edu>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
x86 = "0.7.2"
spin = "0.4.5"
rlibc = "1.0.0"
multiboot2 = "0.3.1"
bitflags = "0.7.0"
bit_field = "0.7.0"

[dependencies.lazy_static]
version = "0.2.2"
features = ["spin_no_std"]

[profile.dev]
opt-level = 0
debug = true